# advent-of-code

./: 1.ipynb  2.ipynb  2_part2.py  3.ipynb  4.ipynb  5.ipynb  6.ipynb  7.ipynb  8.ipynb  pyproject.toml  sd_query.ipynb
